--- a/scraper/package.json
+++ b/scraper/package.json
@@ -9,7 +9,7 @@
     "express-handlebars": "^2.0.1",
     "handlebars": "^4.0.4",
     "init": "^0.1.2",
-    "nodemon": "^1.8.1",
+    "nodemon": "~1.8.1",
     "promises": "^0.2.5",
     "request": "^2.65.0",
     "request-promise": "^1.0.2"
